<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
	        android:layout_weight="2"
	   	android:id="@+id/main_container">
  		<ViewStub 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" />
	</LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
		<TextView  
			android:id="@+id/label_count"
	    	android:layout_width="fill_parent" 
	    	android:layout_height="wrap_content" 
	    	android:gravity="center_horizontal|center_vertical"
	        android:layout_weight="1"
	    	android:textSize="70px"
	    	android:enabled="false" />
		<TextView
			android:id="@+id/label_start_date"
	    	android:layout_width="fill_parent" 
	    	android:layout_height="wrap_content" 
	    	android:text="@string/startDate"
	    	android:textSize="20px"
	    />
		<TextView
			android:id="@+id/label_elapsed_time"
	    	android:layout_width="fill_parent" 
	    	android:layout_height="wrap_content" 
	    	android:text="@string/elapsedTime"
	    	android:textSize="20px"
	    />
    </LinearLayout>
    <LinearLayout
        style="@android:style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/countDownButton"
            android:onClick="onClickCountDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="-" />
        <Button
            android:id="@+id/startStopButton"
            android:onClick="onClickStartStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/clickToStart" />
        <Button
            android:id="@+id/countUpButton"
            android:onClick="onClickCountUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="+" />
    </LinearLayout>
</LinearLayout>
